--- a/app/views/repositories/_form.html.erb
+++ b/app/views/repositories/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div>
-    <%= form.label :user_id, style: "display: block" %>
+    <%= form.label :user_id, "Owner", style: "display: block" %>
     <%= form.collection_select :user_id, User.order(:first_name),:id,:full_name, include_blank: false %>
   </div>
 
